<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_imu_bno055</name>
  <version>0.0.0</version>
  <description>The ros_imu_bno055 package</description>
  <maintainer email="chhathuranga@gmail.com">achala</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ros_imu_bno055</url>
  <author email="chhathuranga@gmail.com">Achala Athukorala</author>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>